# ESpice

./: .gitattributes  .gitignore  QUICK_START.md  RESTRUCTURE_SUMMARY.md  STARTUP_SUMMARY.md  capacitance_characteristics_log_extracted_data.csv  docker-compose.yml  index.html  package.json  start-espace.bat  start-espace.sh  tailwind.config.js  test_batch_processing.py  test_kimi_integration.py  test_test_correlation.py  tsconfig.json  vite.config.ts
.bmad-core/: core-config.yaml  install-manifest.yaml
apps/desktop/src-tauri/: Cargo.toml  prisma-api.js
apps/desktop/src-tauri/src/: lib.rs  main.rs  ollama_setup.rs
backup-20250804-150633/: README.md  backup-exclude.txt  docker-compose.yml  package-lock.json  test_mcp_integration.py  test_mcp_server.py  tsconfig.json
docs/: API_SERVICE_STANDARDS.md  CSS_FIXES_SUMMARY.md  EPC2040_ALL_GRAPH_TYPES.md  EPC2040_CONFIGURATION.md  ESpice_app_optimization_summary.md  GRAPH_EXTRACTION_OFFSETS.md  Implementation.md  README.md  SERVICE_COMPLIANCE_REPORT.md  UI_Implementation_Plan.md  UI_UX_doc.md  UX_Structure_Plan.md  backend-rules.md  curve_extraction_optimization_summary.md  debugging-guide.md  enhanced-graph-extraction-system.md  mcp-server-implementation.md  project_structure.md  web-scraping-guide.md
examples/: BUGFIX_REPORT.md  EPC2040_example.ts  README.md  asm.py  curve_data.db  curve_extract_gui_fixed.py  curve_extract_gui_legacy.py  product_template.csv
mcp-server/: Dockerfile  README.md  env_example.txt
prisma/: dev.db
scripts/: check-curve-extraction-service.ps1  deploy.ps1  restructure-codebase.ps1  (+9 more)
(+557 files in other folders)
