[package]
name = "espice"
version = "1.0.0"
description = "ESpice - Professional SPICE Model Generator for Semiconductor Devices"
authors = ["ESpice Technologies"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "espice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing dependencies
image = "0.24"
imageproc = "0.23"
nalgebra = "0.32"
ndarray = "0.15"
rustfft = "6.0"
rayon = "1.7"

# Ollama setup dependencies
tokio = { version = "1", features = ["time", "macros"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Production optimization settings
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

